update metadata processing notebook

--- a/python/Jupyter_Notebooks/tests_for_coswara_metadata.ipynb
+++ b/python/Jupyter_Notebooks/tests_for_coswara_metadata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "id": "a56e2404",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 10,
    "id": "83986e93",
    "metadata": {},
    "outputs": [
@@ -25,7 +25,7 @@
        "['combined_data.csv', 'pickles', 'Recordings', 'reformatted_metadata.csv']"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "a4451404",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "e0760fb0",
    "metadata": {},
    "outputs": [
@@ -481,7 +481,7 @@
        "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "id": "eb0fdd61",
    "metadata": {},
    "outputs": [],
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "id": "35333f94",
    "metadata": {},
    "outputs": [],
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "2cb1d844",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "max                 2.000000               2.000000  "
       ]
      },
-     "execution_count": 93,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "id": "f27a8759",
    "metadata": {},
    "outputs": [
@@ -833,7 +833,7 @@
        " Name: audio_quality_shallow_breathing, dtype: int64)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "941fb090",
    "metadata": {},
    "outputs": [
@@ -887,7 +887,7 @@
        "Name: covid_health_status, dtype: int64"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "6b6493d3",
    "metadata": {},
    "outputs": [
@@ -910,7 +910,7 @@
        "Name: covid_positive, dtype: int64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 23,
    "id": "a5a2c3b2",
    "metadata": {},
    "outputs": [],
@@ -969,19 +969,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 13,
+   "id": "032f9f14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import librosa\n",
+    "\n",
+    "def get_recording_metadata(id_participant, recordings_path=\"data/Coswara_processed/Recordings\"):\n",
+    "    # returns original duration and duration after trimming trailing/leading silence for each recording type as a dict\n",
+    "    # returns 0 for both if an error occured/the audio is invalid\n",
+    "    recording_types = [\"cough-heavy\", \"cough-shallow\", \"breathing-deep\", \"breathing-shallow\", \"counting-fast\",\n",
+    "                       \"counting-normal\", \"vowel-a\", \"vowel-e\", \"vowel-o\"]\n",
+    "    path = os.path.join(recordings_path, id_participant)\n",
+    "    duration_original = {}\n",
+    "    duration_trimmed = {}\n",
+    "    \n",
+    "    for rec_type in recording_types:\n",
+    "        file_path = f\"{os.path.join(path, rec_type)}.wav\"\n",
+    "        try:\n",
+    "            audio, sample_rate = librosa.load(file_path, sr=None)\n",
+    "        except FileNotFoundError:\n",
+    "            duration_original[rec_type], duration_trimmed[rec_type] = 0, 0\n",
+    "        if len(audio) == 0:            \n",
+    "            duration_original[rec_type], duration_trimmed[rec_type] = 0, 0\n",
+    "        elif max(audio) == 0:\n",
+    "            duration_original[rec_type], duration_trimmed[rec_type] = 0, 0\n",
+    "        else:\n",
+    "            duration_original[rec_type] = len(audio)/sample_rate\n",
+    "            audio, _ = librosa.effects.trim(audio, top_db=54)\n",
+    "            duration_trimmed[rec_type] = len(audio)/sample_rate\n",
+    "            \n",
+    "        \n",
+    "    return duration_original, duration_trimmed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb4ec802",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "13420f28",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 149,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'get_recording_metadata' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [11], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m participant_id \u001b[38;5;241m=\u001b[39m random\u001b[38;5;241m.\u001b[39mchoice(participant_ids)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;66;03m# participant_id = \"0dE8pniDGCZp0gYMy23fvjpZBDr1\"\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m get_recording_metadata(participant_id, recordings_path\u001b[38;5;241m=\u001b[39mrecordings_path)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'get_recording_metadata' is not defined"
+     ]
     }
    ],
    "source": [
@@ -990,7 +1036,8 @@
     "participant_ids = os.listdir(recordings_path)\n",
     "participant_id = random.choice(participant_ids)\n",
     "# participant_id = \"0dE8pniDGCZp0gYMy23fvjpZBDr1\"\n",
-    "are_recordings_valid(participant_id, recordings_path=recordings_path)"
+    "get_recording_metadata(participant_id, recordings_path=recordings_path)\n",
+    "#are_recordings_valid(participant_id)"
    ]
   },
   {
@@ -1042,29 +1089,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 31,
+   "id": "0225ad76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import clear_output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "c9728145",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True     2580\n",
-       "False     166\n",
-       "Name: valid_recording, dtype: int64"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loaded audio_recording_metadata dataframe from disk!\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "recording_types = [\"cough-heavy\", \"cough-shallow\", \"breathing-deep\", \"breathing-shallow\", \"counting-fast\",\n",
+    "                   \"counting-normal\", \"vowel-a\", \"vowel-e\", \"vowel-o\"]\n",
+    "try:\n",
+    "    audio_recording_metadata = pd.read_csv(\"data/Coswara_processed/pickles/duration_df.csv\")\n",
+    "    print(\"loaded audio_recording_metadata dataframe from disk!\")\n",
+    "except FileNotFoundError:  \n",
+    "    durations_original, durations_trimmed = [], []\n",
+    "    for idx, participant in enumerate(participant_ids):\n",
+    "        clear_output(wait=True)\n",
+    "        print(f\"{idx+1} / {len(participant_ids)}\")\n",
+    "        original, trimmed = get_recording_metadata(participant)\n",
+    "        durations_original.append(original), durations_trimmed.append(trimmed)\n",
+    "   \n",
+    "    \n",
+    "    all_durations_orig = {}\n",
+    "    all_durations_trim = {}\n",
+    "    for rec_type in recording_types:\n",
+    "        all_durations_orig[f\"duration_original_{rec_type}\"] = [round(recording[rec_type],3) for recording in durations_original]\n",
+    "        all_durations_trim[f\"duration_trimmed_{rec_type}\"] = [round(recording[rec_type],3) for recording in durations_trimmed]\n",
+    "\n",
+    "    duration_dict = {\"ids\":participant_ids}\n",
+    "    duration_dict.update(all_durations_orig)\n",
+    "    duration_dict.update(all_durations_trim)\n",
+    "    audio_recording_metadata = pd.DataFrame(duration_dict)\n",
+    "\n",
+    "    duration_df.to_csv(\"data/Coswara_processed/pickles/duration_df.csv\")\n",
+    "#all_durations_orig, all_durations_trim"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "767edfd3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f7e802",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c725cdcc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdbcee80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceff97a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d0f821a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70450f21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3577dea",
    "metadata": {},
    "outputs": [],
    "source": []
