finalize metadata preprocessing
now there should be a functioning notebook and a python script for it. for more insight look at notebook

--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -269,7 +269,7 @@
    "metadata": {},
    "source": [
     "### Load original meta data file\n",
-    "Make sure that the \"combined matadata\" file was copied in this directory from the original coswara folder"
+    "Make sure that the \"combined matadata\" file was copied in this directory from the original coswara folder and renamed tto \"original_metadata.csv\""
    ]
   },
   {
