--- a/python/Jupyter_Notebooks/Metadata_Processing.ipynb
+++ b/python/Jupyter_Notebooks/Metadata_Processing.ipynb
@@ -32,7 +32,7 @@
    "source": [
     "path = os.environ.get(\"PATH\")\n",
     "additional_path = 'C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\mingw-w64\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\usr\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Scripts;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\bin;C:\\\\Users\\\\Michi\\\\Anaconda3\\\\condabin'\n",
-    "min_additional_path = \"C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\bin;\"\n",
+    "min_additional_path = \"C:\\\\Users\\\\Michi\\\\Anaconda3\\\\envs\\\\python_v3-8\\\\Library\\\\bin;C:\\\\Users\\\\micha\\\\anaconda3\\\\envs\\\\ai38\\\\Library\\\\bin;\"\n",
     "combined_path = min_additional_path + path\n",
     "os.environ[\"PATH\"] = combined_path\n",
     "import librosa"
