--- a/python/Jupyter_Notebooks/testing_augmentations.ipynb
+++ b/python/Jupyter_Notebooks/testing_augmentations.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "aba5eed9",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "import pickle"
+    "import pickle\n",
+    "import random"
    ]
   },
   {
@@ -26,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "df42c82b",
    "metadata": {},
    "outputs": [],
@@ -40,18 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "id": "2e7bf690",
    "metadata": {},
    "outputs": [],
    "source": [
     "import librosa\n",
-    "import sounddevice"
+    "import sounddevice as sd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "13fbc49f",
    "metadata": {},
    "outputs": [],
@@ -326,52 +327,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b826ab59",
+   "cell_type": "markdown",
+   "id": "b0b632f0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Audiomentations"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "131fe38e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from torch_audiomentations import Compose, AddBackgroundNoise, PitchShift, HighPassFilter, Gain, Shift\n",
+    "from audiomentations import Compose, AddGaussianNoise, PitchShift, HighPassFilter, Gain, Shift, TimeStretch, Trim"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "3eace097",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'data/Coswara_processed/Recordings/JJAEXqn68kVaaOsFjX7n5Qehaws1/cough-heavy.wav'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "participant_ids = os.listdir(\"data/Coswara_processed/Recordings/\")\n",
+    "participant = random.choice(participant_ids)\n",
+    "audio_path = f\"data/Coswara_processed/Recordings/{participant}/cough-heavy.wav\"\n",
+    "audio_path"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "e89a519c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "duration of recording: 2.0s\n"
+     ]
+    }
+   ],
+   "source": [
+    "audio, sr = librosa.load(audio_path)\n",
+    "audio = audio[1*sr:3*sr]\n",
+    "\n",
+    "print(f\"duration of recording: {round(len(audio)/sr, 1)}s\")\n",
+    "sd.play(audio, sr)\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "e7eae8b2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "augmentations = Compose([\n",
+    "    AddGaussianNoise(min_amplitude=0.0001, max_amplitude=0.02, p=1.),\n",
+    "    PitchShift(min_semitones=-2, max_semitones=2, p=1.),\n",
+    "    TimeStretch(min_rate=0.85, max_rate=1.15, leave_length_unchanged=False, p=1.0)\n",
+    "    \n",
+    "])\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "14f50ac7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "augmented_audio = augmentations(audio, sr)\n",
+    "sd.play(augmented_audio, sr)"
+   ]
   },
   {
    "cell_type": "code",
