new features for resnet

--- a/python/Jupyter_Notebooks/testing_augmentations.ipynb
+++ b/python/Jupyter_Notebooks/testing_augmentations.ipynb
@@ -273,9 +273,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
