--- a/python/Jupyter_Notebooks/Audio Preprocessing and Time Domain Augmentations.ipynb
+++ b/python/Jupyter_Notebooks/Audio Preprocessing and Time Domain Augmentations.ipynb
@@ -161,9 +161,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "ai38",
+   "display_name": "Python (python_v3-8)",
    "language": "python",
-   "name": "ai38"
+   "name": "python_v3-8"
   },
   "language_info": {
    "codemirror_mode": {
